// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarMenuLink handles active state 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Settings"
        isactive="false"
        data-active="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
      >
        <button
          to
          role="button"
          class="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span
            class="text-muted-foreground"
            style="z-index: 1;"
          >
            Settings
          </span>
          <gui-chevron-right-icon
            style="z-index: 1;"
            classname="ml-auto transition-transform duration-200 group-data-[state=open]/collapsible:rotate-90"
          >
          </gui-chevron-right-icon>
        </button>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
    <gui-collapsible-content>
      <gui-sidebar-menu-sub>
        <div
          class="flex flex-col gap-1"
          style="opacity: 0;"
        >
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="true"
                    data-active="true"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
                  >
                    <gui-nav-link
                      to="/settings/profile"
                      role="button"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span
                        class="text-muted-foreground"
                        style="z-index: 2;"
                      >
                        Profile
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    data-active="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
                  >
                    <gui-nav-link
                      to="/settings/security"
                      role="button"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span
                        class="text-muted-foreground"
                        style="z-index: 2;"
                      >
                        Security
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
        </div>
      </gui-sidebar-menu-sub>
    </gui-collapsible-content>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink handles collapsible menu items 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Settings"
        isactive="false"
        data-active="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
      >
        <button
          to
          role="button"
          class="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span
            class="text-muted-foreground"
            style="z-index: 1;"
          >
            Settings
          </span>
          <gui-chevron-right-icon
            style="z-index: 1;"
            classname="ml-auto transition-transform duration-200 group-data-[state=open]/collapsible:rotate-90"
          >
          </gui-chevron-right-icon>
        </button>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
    <gui-collapsible-content>
      <gui-sidebar-menu-sub>
        <div
          class="flex flex-col gap-1"
          style="opacity: 0;"
        >
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    data-active="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
                  >
                    <gui-nav-link
                      to="/settings/profile"
                      role="button"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span
                        class="text-muted-foreground"
                        style="z-index: 2;"
                      >
                        Profile
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    data-active="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
                  >
                    <gui-nav-link
                      to="/settings/security"
                      role="button"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span
                        class="text-muted-foreground"
                        style="z-index: 2;"
                      >
                        Security
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
        </div>
      </gui-sidebar-menu-sub>
    </gui-collapsible-content>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink handles nested menu items 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Products"
        isactive="false"
        data-active="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
      >
        <button
          to
          role="button"
          class="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span
            class="text-muted-foreground"
            style="z-index: 1;"
          >
            Products
          </span>
          <gui-chevron-right-icon
            style="z-index: 1;"
            classname="ml-auto transition-transform duration-200 group-data-[state=open]/collapsible:rotate-90"
          >
          </gui-chevron-right-icon>
        </button>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
    <gui-collapsible-content>
      <gui-sidebar-menu-sub>
        <div
          class="flex flex-col gap-1"
          style="opacity: 0;"
        >
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    data-active="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
                  >
                    <gui-nav-link
                      to="/products"
                      role="button"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span
                        class="text-muted-foreground"
                        style="z-index: 2;"
                      >
                        Overview
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    data-active="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
                  >
                    <button
                      to
                      role="button"
                      class="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span
                        class="text-muted-foreground"
                        style="z-index: 2;"
                      >
                        Categories
                      </span>
                      <gui-chevron-right-icon
                        style="z-index: 2;"
                        classname="ml-auto transition-transform duration-200 group-data-[state=open]/collapsible:rotate-90"
                      >
                      </gui-chevron-right-icon>
                    </button>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
                <gui-collapsible-content>
                  <gui-sidebar-menu-sub>
                    <div
                      class="flex flex-col gap-1"
                      style="opacity: 0;"
                    >
                      <div style="opacity: 0; transform: translateY(-1px);">
                        <gui-collapsible
                          aschild="true"
                          classname="group/collapsible hover:bg-transparent"
                        >
                          <gui-sidebar-menu-sub-item>
                            <gui-collapsible-trigger aschild="true">
                              <gui-sidebar-menu-sub-button
                                aschild="true"
                                isactive="false"
                                data-active="false"
                                classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
                              >
                                <gui-nav-link
                                  to="/products/electronics"
                                  role="button"
                                  classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                                >
                                  <span
                                    class="text-muted-foreground"
                                    style="z-index: 3;"
                                  >
                                    Electronics
                                  </span>
                                </gui-nav-link>
                              </gui-sidebar-menu-sub-button>
                            </gui-collapsible-trigger>
                          </gui-sidebar-menu-sub-item>
                        </gui-collapsible>
                      </div>
                      <div style="opacity: 0; transform: translateY(-1px);">
                        <gui-collapsible
                          aschild="true"
                          classname="group/collapsible hover:bg-transparent"
                        >
                          <gui-sidebar-menu-sub-item>
                            <gui-collapsible-trigger aschild="true">
                              <gui-sidebar-menu-sub-button
                                aschild="true"
                                isactive="false"
                                data-active="false"
                                classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
                              >
                                <gui-nav-link
                                  to="/products/clothing"
                                  role="button"
                                  classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                                >
                                  <span
                                    class="text-muted-foreground"
                                    style="z-index: 3;"
                                  >
                                    Clothing
                                  </span>
                                </gui-nav-link>
                              </gui-sidebar-menu-sub-button>
                            </gui-collapsible-trigger>
                          </gui-sidebar-menu-sub-item>
                        </gui-collapsible>
                      </div>
                    </div>
                  </gui-sidebar-menu-sub>
                </gui-collapsible-content>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
        </div>
      </gui-sidebar-menu-sub>
    </gui-collapsible-content>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink renders basic menu item 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Home"
        isactive="true"
        data-active="true"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
      >
        <gui-nav-link
          to="/"
          role="button"
          classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span
            class="text-muted-foreground"
            style="z-index: 1;"
          >
            Home
          </span>
        </gui-nav-link>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink renders external link 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Documentation"
        isactive="false"
        data-active="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
      >
        <gui-nav-link
          to="https://docs.example.com"
          role="button"
          classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span
            class="text-muted-foreground"
            style="z-index: 1;"
          >
            Documentation
          </span>
        </gui-nav-link>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink renders menu item with badge 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Notifications"
        isactive="false"
        data-active="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground [&amp;>*]:data-[active=true]:text-foreground [&amp;>svg]:data-[active=false]:text-muted-foreground"
      >
        <gui-nav-link
          to="/notifications"
          role="button"
          classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span
            class="text-muted-foreground"
            style="z-index: 1;"
          >
            Notifications
          </span>
          <gui-sidebar-menu-badge>
            3
          </gui-sidebar-menu-badge>
        </gui-nav-link>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;
